--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,36 @@
 # Project dependencies
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
-node_modules
-.cache/
+
+
 # Build directory
 public/
 static/admin/*.bundle.*
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+reports/
+
+# Dependency directories
+node_modules/
+/bin/
+
+# Optional npm cache directory
+.npm
+
+# Yarn Integrity file
+.yarn-integrity
+
+# IDE stuff
+.idea/
+.project/
+.vscode/
+.vs/
+
+# misc
 .DS_Store
-yarn-error.log
+.cache/
+
