--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
+    "react-intl": "^2.9.0",
     "react-load-script": "^0.0.6",
     "uuid": "^3.2.1"
   },
