--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
   "main.js": "render-page.js",
   "main.js.map": "render-page.js.map",
+  "static/Gagarin_wordmark-congress-blue-web.png": "static/Gagarin_wordmark-congress-blue-web-b100608bfa4a4db8b4d2cccf5cbb9924.png",
   "static/supercropped.jpg": "static/supercropped-6fc5eb8ae28588c7053b01059b4ea988.jpg"
 }
