--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,22 @@
   "main.js.map": "render-page.js.map",
   "static/Hero-desktop_tablet.jpg": "static/Hero-desktop_tablet-7dd5787dea0bd79cd73fbcee38b673de.jpg",
   "static/Hero-mobile.png": "static/Hero-mobile-6592cc59ce91d6eb2d7d8257f305b546.png",
+  "static/Policy-Banking.png": "static/Policy-Banking-9ae155a02b77f5b02de6d601b16c5593.png",
+  "static/Policy-CampaignFin.png": "static/Policy-CampaignFin-9f1fea53c20fd21046bfdc9be525ea90.png",
+  "static/Policy-Education.png": "static/Policy-Education-55738cb334f6667427761cbfcfb073f4.png",
+  "static/Policy-GoldenYears.png": "static/Policy-GoldenYears-1b0eb6096ea1a6fcccca8a777d74f972.png",
+  "static/Policy-GreenNewDeal.png": "static/Policy-GreenNewDeal-ffe371f8f97010603566386f09b01b04.png",
+  "static/Policy-Housing.png": "static/Policy-Housing-118b8baa57bcb7ff500b0c23ee1d2fbe.png",
+  "static/Policy-Immigration.png": "static/Policy-Immigration-e311e861642cbdfb4cb30a05b6ee7f7d.png",
+  "static/Policy-Justice.png": "static/Policy-Justice-01e2eca9044fa5ef14193efd82c9f02e.png",
+  "static/Policy-LGBT.png": "static/Policy-LGBT-7ef81462555d2d20a1f9bb679d088142.png",
+  "static/Policy-M4A.png": "static/Policy-M4A-7e59d839201bfc1986509e30c45a145f.png",
+  "static/Policy-Peace.png": "static/Policy-Peace-e775cbc876f72316cda109f88a467da4.png",
+  "static/Policy-Privacy.png": "static/Policy-Privacy-fe8110a12b122396a01b51c75adc3853.png",
+  "static/Policy-SESTA.png": "static/Policy-SESTA-0b98621c7e8d4c78495d0ecba30ab180.png",
+  "static/Policy-UBI.png": "static/Policy-UBI-8cd5a8470f7b92f23d6f733408428dff.png",
+  "static/Policy-Veterans.png": "static/Policy-Veterans-3cceb8d25688d6c9ab1f667c6f7621d8.png",
+  "static/Policy-Women.png": "static/Policy-Women-62b1f6c884c44506392d680f322da5d0.png",
   "static/mel-logo-web-desktop.png": "static/mel-logo-web-desktop-b100608bfa4a4db8b4d2cccf5cbb9924.png",
   "static/mel-logo-web-mobile.png": "static/mel-logo-web-mobile-20b6542a641698f39d39c9eec6081b7b.png"
 }
