--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-image": "^2.0.23",
     "gatsby-plugin-amplitude-analytics": "^1.5.0",
     "gatsby-plugin-google-analytics": "^2.1.4",
+    "gatsby-plugin-i18n": "^1.0.1",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cms": "^4.0.0",
     "gatsby-plugin-purgecss": "^4.0.0",
