--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
+    "axios": "^0.19.2",
     "bulma": "^0.7.0",
     "flat": "^4.1.0",
     "gatsby": "^2.13.31",
