--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,9 @@
   "static/FTD_logo-200px.png": "static/FTD_logo-200px-3b4726a1b30f9d96793b35ae49dd6b68.png",
   "static/Field-1.jpg": "static/Field-1-6f3fafee193db40f6ee385428297a5fe.jpg",
   "static/Field-QFB.jpg": "static/Field-QFB-6ea447ef9ec90ef0ca793b3afba1744a.jpg",
+  "static/Hero-desktop_tablet-spring.jpg": "static/Hero-desktop_tablet-spring-91bb7ae58aaf58e1afd64360fb27be22.jpg",
   "static/Hero-desktop_tablet.jpg": "static/Hero-desktop_tablet-7dd5787dea0bd79cd73fbcee38b673de.jpg",
+  "static/Hero-mobile-spring.jpg": "static/Hero-mobile-spring-0b8c4a47695c49e2332c2f7101cf35dd.jpg",
   "static/Hero-mobile.png": "static/Hero-mobile-6592cc59ce91d6eb2d7d8257f305b546.png",
   "static/Mel-BlandHouses.jpg": "static/Mel-BlandHouses-d542cb74623a2f7297df3c4b4fbda220.jpg",
   "static/OPF_logo-200px.png": "static/OPF_logo-200px-813bc54e9479bfcc9ff32156075ccc3d.png",
