--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "main.js": "render-page.js",
   "main.js.map": "render-page.js.map",
+  "static/APIS_logo.png": "static/APIS_logo-9d3cb9b2fdffdf4275a043e45ef62241.png",
   "static/BNC_logo-400px.png": "static/BNC_logo-400px-c59f7dc5c84ae12f4036613cf1be98a8.png",
   "static/DUH_logo.png": "static/DUH_logo-7b29fa461e4a6166252c31585cbd610b.png",
   "static/FTD_logo-200px.png": "static/FTD_logo-200px-3b4726a1b30f9d96793b35ae49dd6b68.png",
@@ -10,6 +11,7 @@
   "static/Hero-desktop_tablet.jpg": "static/Hero-desktop_tablet-7dd5787dea0bd79cd73fbcee38b673de.jpg",
   "static/Hero-mobile-spring.jpg": "static/Hero-mobile-spring-0b8c4a47695c49e2332c2f7101cf35dd.jpg",
   "static/Hero-mobile.png": "static/Hero-mobile-6592cc59ce91d6eb2d7d8257f305b546.png",
+  "static/IncomeMvmt_logo.png": "static/IncomeMvmt_logo-12b78905010ff7ed249657db3af9d174.png",
   "static/Mel-BlandHouses.jpg": "static/Mel-BlandHouses-d542cb74623a2f7297df3c4b4fbda220.jpg",
   "static/NYPAN-logo.png": "static/NYPAN-logo-f77c1df377749ccc8d8bf40d4f557dbe.png",
   "static/OPF_logo-200px.png": "static/OPF_logo-200px-813bc54e9479bfcc9ff32156075ccc3d.png",
